ci: fix wine ref default and autogenerate configure for protonwine

--- a/.github/workflows/ci-wine-11.1-wcp.yml
+++ b/.github/workflows/ci-wine-11.1-wcp.yml
@@ -6,7 +6,7 @@ on:
       wine_ref:
         description: "Git ref в AndreRH/wine (tag/branch/commit). Пример: wine-11.1 или конкретный SHA."
         required: true
-        default: "wine-11.1"
+        default: "arm64ec"
       llvm_mingw_tag:
         description: "Тег релиза mstorsjo/llvm-mingw (лучше брать тот, что уже на LLVM 22.1.0-rc3)."
         required: true
