--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -15,7 +15,7 @@ on:
       wine_ref:
         description: "Git ref in AndreRH/wine"
         required: false
-        default: "wine-11.1"
+        default: "arm64ec"
       llvm_mingw_ver:
         description: "llvm-mingw version tag"
         required: false
@@ -35,7 +35,7 @@ permissions:
 env:
   WCP_NAME: wine-11.1-arm64ec
   WCP_OUTPUT_DIR: ${{ github.workspace }}/out/wine
-  WINE_REF: ${{ github.event.inputs.wine_ref || 'wine-11.1' }}
+  WINE_REF: ${{ github.event.inputs.wine_ref || 'arm64ec' }}
   LLVM_MINGW_VER: ${{ github.event.inputs.llvm_mingw_ver || '20260210' }}
   WCP_COMPRESS: ${{ github.event.inputs.compress || 'xz' }}
   TOOLCHAIN_DIR: ${{ github.workspace }}/.cache/llvm-mingw
