--- a/.github/workflows/ci-winlator.yml
+++ b/.github/workflows/ci-winlator.yml
@@ -66,7 +66,7 @@ jobs:
           set -euxo pipefail
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-            bash curl git python3 tar xz-utils zstd unzip zip rsync file
+            bash curl git git-lfs python3 tar xz-utils zstd unzip zip rsync file
 
       - name: Build Winlator Ludashi fork APK
         env:
