--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Build Wine 11.1 ARM64EC (WCP)
+name: Build Wine 11 ARM64EC (WCP)
 
 on:
   push:
@@ -32,7 +32,7 @@ permissions:
   contents: write
 
 env:
-  WCP_NAME: wine-11.1-arm64ec
+  WCP_NAME: wine-11-arm64ec
   WCP_OUTPUT_DIR: ${{ github.workspace }}/out/wine
   WINE_REF: ${{ github.event.inputs.wine_ref || 'arm64ec' }}
   LLVM_MINGW_VER: ${{ github.event.inputs.llvm_mingw_ver || '20260210' }}
@@ -78,7 +78,7 @@ jobs:
           path: ${{ env.TOOLCHAIN_DIR }}
           key: llvm-mingw-${{ env.LLVM_MINGW_VER }}
 
-      - name: Build Wine 11.1 ARM64EC WCP
+      - name: Build Wine 11 ARM64EC WCP
         run: |
           set -euxo pipefail
           chmod +x build.sh
@@ -94,9 +94,9 @@ jobs:
       - name: Upload WCP artifact
         uses: actions/upload-artifact@v4
         with:
-          name: wine-11.1-arm64ec
+          name: wine-11-arm64ec
           path: |
-            out/wine/wine-11.1-arm64ec.wcp
+            out/wine/wine-11-arm64ec.wcp
             out/wine/SHA256SUMS
             out/wine/logs/**
           if-no-files-found: error
@@ -108,7 +108,7 @@ jobs:
           set -euxo pipefail
           cp "${WCP_OUTPUT_DIR}/SHA256SUMS" "${WCP_OUTPUT_DIR}/SHA256SUMS-${WCP_NAME}.txt"
           cat > RELEASE_NOTES.md <<EOF_NOTES
-          Wine 11.1 ARM64EC WCP
+          Wine 11 ARM64EC WCP
           Commit: ${{ github.sha }}
           Workflow run: ${{ github.run_id }}
           EOF_NOTES
@@ -122,6 +122,6 @@ jobs:
           allowUpdates: true
           prerelease: true
           removeArtifacts: false
-          artifacts: out/wine/wine-11.1-arm64ec.wcp,out/wine/SHA256SUMS-wine-11.1-arm64ec.txt
+          artifacts: out/wine/wine-11-arm64ec.wcp,out/wine/SHA256SUMS-wine-11-arm64ec.txt
           artifactErrorsFailBuild: true
           bodyFile: RELEASE_NOTES.md
