--- a/.github/workflows/ci-winlator.yml
+++ b/.github/workflows/ci-winlator.yml
@@ -31,6 +31,7 @@ env:
   WINLATOR_LUDASHI_REF: ${{ github.event.inputs.winlator_ref || 'winlator_bionic' }}
   RUNTIME_RELEASE_REPO: ${{ github.repository }}
   RUNTIME_RELEASE_TAG: ${{ github.event.inputs.runtime_release_tag || 'wcp-latest' }}
+  PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
 
 jobs:
   build:
