--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -37,6 +37,12 @@ env:
   WINE_REF: ${{ github.event.inputs.wine_ref || 'arm64ec' }}
   LLVM_MINGW_VER: ${{ github.event.inputs.llvm_mingw_ver || '20260210' }}
   WCP_COMPRESS: ${{ github.event.inputs.compress || 'xz' }}
+  WCP_VERSION_CODE: "1"
+  WCP_CHANNEL: nightly
+  WCP_DELIVERY: remote
+  WCP_DISPLAY_CATEGORY: Wine/Proton
+  WCP_SOURCE_REPO: ${{ github.repository }}
+  WCP_RELEASE_TAG: wcp-latest
   TOOLCHAIN_DIR: ${{ github.workspace }}/.cache/llvm-mingw
   TARGET_HOST: aarch64-linux-gnu
   WCP_ENABLE_SDL2_RUNTIME: "1"
@@ -109,7 +115,18 @@ jobs:
           set -euxo pipefail
           cp "${WCP_OUTPUT_DIR}/SHA256SUMS" "${WCP_OUTPUT_DIR}/SHA256SUMS-${WCP_NAME}.txt"
           cat > RELEASE_NOTES.md <<EOF_NOTES
-          Wine 11 ARM64EC WCP
+          Wine 11 ARM64EC WCP (nightly / 0.2b line)
+
+          RU:
+          - Канал: nightly (wcp-latest)
+          - Тип в Winlator Contents: Wine/Proton
+          - Источник для Contents: GitHub Releases этого репозитория
+
+          EN:
+          - Channel: nightly (wcp-latest)
+          - Winlator Contents display type: Wine/Proton
+          - Source for Contents: this repository GitHub Releases
+
           Commit: ${{ github.sha }}
           Workflow run: ${{ github.run_id }}
           EOF_NOTES
@@ -119,7 +136,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           tag: wcp-latest
-          name: WCP Latest Build
+          name: WCP Latest Build (0.2b line)
           allowUpdates: true
           prerelease: true
           removeArtifacts: false
