--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -48,7 +48,7 @@ env:
   WCP_DELIVERY: remote
   WCP_DISPLAY_CATEGORY: Wine/Proton
   WCP_SOURCE_REPO: ${{ github.repository }}
-  WCP_RELEASE_TAG: wcp-latest
+  WCP_RELEASE_TAG: protonwine10-gamenative-arm64ec-latest
   TARGET_HOST: aarch64-linux-gnu
   WCP_TARGET_RUNTIME: winlator-bionic
   WCP_PRUNE_EXTERNAL_COMPONENTS: "1"
@@ -122,17 +122,16 @@ jobs:
         run: |
           set -euxo pipefail
           cp "${WCP_OUTPUT_DIR}/SHA256SUMS" "${WCP_OUTPUT_DIR}/SHA256SUMS-${WCP_NAME}.txt"
-          cp docs/PROTONWINE_ANDROID_SUPPORT_REVIEW.md "docs/PROTONWINE_ANDROID_SUPPORT_REVIEW-${WCP_NAME}.md"
           cat > RELEASE_NOTES.md <<EOF_NOTES
-          ProtonWine10 GameNative ARM64EC WCP (nightly / 0.2b line)
+          ProtonWine10 GameNative ARM64EC WCP (rolling nightly / 0.2b line)
 
           RU:
-          - Канал: nightly (wcp-latest)
+          - Канал: nightly (protonwine10-gamenative-arm64ec-latest)
           - Тип в Winlator Contents: Wine/Proton
           - Источник для Contents: GitHub Releases этого репозитория
 
           EN:
-          - Channel: nightly (wcp-latest)
+          - Channel: nightly (protonwine10-gamenative-arm64ec-latest)
           - Winlator Contents display type: Wine/Proton
           - Source for Contents: this repository GitHub Releases
 
@@ -144,11 +143,11 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: ncipollo/release-action@v1
         with:
-          tag: wcp-latest
-          name: WCP Latest Build (0.2b line)
+          tag: protonwine10-gamenative-arm64ec-latest
+          name: ProtonWine10 GameNative ARM64EC Latest (0.2b line)
           allowUpdates: true
           prerelease: true
-          removeArtifacts: false
-          artifacts: out/protonwine10/protonwine10-gamenative-arm64ec.wcp,out/protonwine10/SHA256SUMS-protonwine10-gamenative-arm64ec.txt,docs/PROTONWINE_ANDROID_SUPPORT_REVIEW-protonwine10-gamenative-arm64ec.md
+          removeArtifacts: true
+          artifacts: out/protonwine10/protonwine10-gamenative-arm64ec.wcp,out/protonwine10/SHA256SUMS-protonwine10-gamenative-arm64ec.txt
           artifactErrorsFailBuild: true
           bodyFile: RELEASE_NOTES.md
