ci: default WCP builds to pinned glibc 2.43 runtime lane

--- a/ci/runtime-bundle/locks/glibc-2.43-bundle-v1.env
+++ b/ci/runtime-bundle/locks/glibc-2.43-bundle-v1.env
@@ -16,4 +16,9 @@ WCP_LOCK_EXPECT_LOADER_REGEX='(GLIBC[^0-9]*2\.43|GNU C Library.*2\.43|Ubuntu GLI
 WCP_LOCK_EXPECT_LIBSTDCXX_REGEX='(GLIBCXX_|GCC: \()'
 WCP_LOCK_EXPECT_LIBGCC_REGEX='(GCC_|GCC: \()'
 WCP_LOCK_EXPECT_LIBSDL2_REGEX='(SDL[_ ]?2(\.[0-9]+)+|UNKNOWN|MISSING)'
-
+WCP_LOCK_EXPECT_LIBZ_REGEX='(.+|MISSING)'
+WCP_LOCK_EXPECT_LIBNSL_REGEX='(.+|MISSING)'
+WCP_LOCK_EXPECT_LIBNSS_FILES_REGEX='(.+|MISSING)'
+WCP_LOCK_EXPECT_LIBNSS_DNS_REGEX='(.+|MISSING)'
+WCP_LOCK_EXPECT_LIBRESOLV_REGEX='(.+|MISSING)'
+WCP_LOCK_EXPECT_LIBUTIL_REGEX='(.+|MISSING)'
