ci: add glibc source build deps to WCP workflows

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -65,7 +65,7 @@ jobs:
             bash curl git python3 wget unzip tar pkg-config \
             cmake ninja-build rsync \
             zstd file binutils nasm \
-            build-essential \
+            build-essential gawk bison \
             libfreetype-dev fonts-dejavu-core \
             libglib2.0-dev gstreamer1.0-tools \
             libxslt1-dev libxml2-dev \
