--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -70,7 +70,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             ca-certificates curl git python3 tar xz-utils zstd rsync file binutils \
-            build-essential autoconf automake libtool pkg-config bison flex gettext \
+            build-essential autoconf automake libtool pkg-config bison flex gettext gawk \
             cmake ninja-build \
             libunwind-dev libxml2-dev zlib1g-dev \
             libfreetype-dev libjpeg-dev libpng-dev libtiff-dev \
