ci: prune glibc source-build staging to reduce WCP runner disk usage

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -7,6 +7,7 @@ on:
       - "build.sh"
       - "ci/ci-build.sh"
       - "ci/lib/**"
+      - "ci/runtime-bundle/**"
       - ".github/workflows/ci-arm64ec-wine.yml"
       - "docs/**"
   workflow_dispatch:
