--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -7,6 +7,7 @@ on:
       - "ci/proton-ge10/**"
       - "ci/proton10/**"
       - "ci/lib/**"
+      - "ci/runtime-bundle/**"
       - ".github/workflows/ci-proton-ge10-wcp.yml"
       - "docs/**"
   workflow_dispatch:
