--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - "ci/protonwine10/**"
       - "ci/lib/**"
+      - "ci/runtime-bundle/**"
       - ".github/workflows/ci-protonwine10-wcp.yml"
       - "docs/**"
   workflow_dispatch:
