ci: cap WCP build parallelism for pinned glibc lane stability

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -47,6 +47,9 @@ env:
   TOOLCHAIN_DIR: ${{ github.workspace }}/.cache/llvm-mingw
   TARGET_HOST: aarch64-linux-gnu
   WCP_ENABLE_SDL2_RUNTIME: "1"
+  WCP_WINE_BUILD_JOBS: "2"
+  WCP_FEX_BUILD_JOBS: "2"
+  WCP_GLIBC_BUILD_JOBS: "2"
   PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
 
 jobs:
