ci/winlator: default WCP runtime class to bionic-native and fix 0035 compile patch

--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -56,6 +56,8 @@ env:
   WCP_ENABLE_SDL2_RUNTIME: "1"
   WCP_WINE_BUILD_JOBS: "2"
   WCP_GLIBC_BUILD_JOBS: "2"
+  WCP_RUNTIME_CLASS_TARGET: bionic-native
+  WCP_RUNTIME_CLASS_ENFORCE: "0"
   WCP_RUNTIME_BUNDLE_LOCK_MODE: relaxed-enforce
   WCP_INCLUDE_FEX_DLLS: "0"
   WCP_FEX_EXPECTATION_MODE: external
