--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -50,6 +50,8 @@ env:
   WCP_WINE_BUILD_JOBS: "2"
   WCP_FEX_BUILD_JOBS: "2"
   WCP_GLIBC_BUILD_JOBS: "2"
+  WCP_RUNTIME_CLASS_TARGET: bionic-native
+  WCP_RUNTIME_CLASS_ENFORCE: "0"
   WCP_RUNTIME_BUNDLE_LOCK_MODE: relaxed-enforce
   WCP_INCLUDE_FEX_DLLS: "0"
   WCP_FEX_EXPECTATION_MODE: external
