--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -49,10 +49,10 @@ env:
   WCP_ENABLE_SDL2_RUNTIME: "1"
   WCP_WINE_BUILD_JOBS: "2"
   WCP_FEX_BUILD_JOBS: "2"
-  WCP_GLIBC_BUILD_JOBS: "2"
   WCP_RUNTIME_CLASS_TARGET: bionic-native
-  WCP_RUNTIME_CLASS_ENFORCE: "0"
-  WCP_RUNTIME_BUNDLE_LOCK_MODE: relaxed-enforce
+  WCP_RUNTIME_CLASS_ENFORCE: "1"
+  WCP_GLIBC_SOURCE_MODE: host
+  WCP_RUNTIME_BUNDLE_LOCK_MODE: audit
   WCP_INCLUDE_FEX_DLLS: "0"
   WCP_FEX_EXPECTATION_MODE: external
   PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
@@ -124,7 +124,7 @@ jobs:
           set -euxo pipefail
           cp "${WCP_OUTPUT_DIR}/SHA256SUMS" "${WCP_OUTPUT_DIR}/SHA256SUMS-${WCP_NAME}.txt"
           cat > RELEASE_NOTES.md <<EOF_NOTES
-          Wine 11 ARM64EC WCP (rolling nightly / 0.2b line)
+          Wine 11 ARM64EC WCP (rolling nightly / 0.9a line)
 
           RU:
           - Канал: nightly (wine-11-arm64ec-latest)
@@ -145,7 +145,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           tag: wine-11-arm64ec-latest
-          name: Wine 11 ARM64EC Latest (0.2b line)
+          name: Wine 11 ARM64EC Latest (0.9a line)
           allowUpdates: true
           prerelease: true
           removeArtifacts: true
