--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -131,7 +131,7 @@ jobs:
           set -euxo pipefail
           cp "${WCP_OUTPUT_DIR}/SHA256SUMS" "${WCP_OUTPUT_DIR}/SHA256SUMS-${WCP_NAME}.txt"
           cat > RELEASE_NOTES.md <<EOF_NOTES
-          Proton GE10 ARM64EC WCP (rolling nightly / 0.9a line)
+          Proton GE10 ARM64EC WCP (rolling nightly)
 
           RU:
           - Канал: nightly (proton-ge10-arm64ec-latest)
@@ -152,7 +152,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           tag: proton-ge10-arm64ec-latest
-          name: Proton GE10 ARM64EC Latest (0.9a line)
+          name: Proton GE10 ARM64EC Latest
           allowUpdates: true
           prerelease: true
           removeArtifacts: true
