ci/runtime: enforce hard bionic-only mainline policy

--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -58,6 +58,11 @@ env:
   WCP_RUNTIME_BUNDLE_LOCK_MODE: audit
   WCP_INCLUDE_FEX_DLLS: "0"
   WCP_FEX_EXPECTATION_MODE: external
+  WCP_MAINLINE_BIONIC_ONLY: "1"
+  WCP_ALLOW_GLIBC_EXPERIMENTAL: "0"
+  WCP_BIONIC_SOURCE_MAP_FILE: ${{ github.workspace }}/ci/runtime-sources/bionic-source-map.json
+  WCP_BIONIC_SOURCE_MAP_FORCE: "1"
+  WCP_BIONIC_SOURCE_MAP_REQUIRED: "1"
   WCP_BIONIC_LAUNCHER_SOURCE_WCP_URL: https://github.com/StevenMXZ/Winlator-Contents/releases/download/1.0/proton-10-4-arm64ec.wcp.xz
   PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
 
