ci: enforce external runtime policy for mainline wcp

--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -59,6 +59,7 @@ env:
   WCP_INCLUDE_FEX_DLLS: "0"
   WCP_FEX_EXPECTATION_MODE: external
   WCP_MAINLINE_BIONIC_ONLY: "1"
+  WCP_MAINLINE_FEX_EXTERNAL_ONLY: "1"
   WCP_ALLOW_GLIBC_EXPERIMENTAL: "0"
   WCP_BIONIC_SOURCE_MAP_FILE: ${{ github.workspace }}/ci/runtime-sources/bionic-source-map.json
   WCP_BIONIC_SOURCE_MAP_FORCE: "1"
