--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -59,6 +59,9 @@ env:
   WCP_MAINLINE_BIONIC_ONLY: "1"
   WCP_MAINLINE_FEX_EXTERNAL_ONLY: "1"
   WCP_ALLOW_GLIBC_EXPERIMENTAL: "0"
+  WCP_WRAPPER_POLICY_VERSION: urc-v1
+  WCP_POLICY_SOURCE: aeroso-mainline
+  WCP_FALLBACK_SCOPE: bionic-internal-only
   WCP_BIONIC_SOURCE_MAP_FILE: ${{ github.workspace }}/ci/runtime-sources/bionic-source-map.json
   WCP_BIONIC_SOURCE_MAP_FORCE: "1"
   WCP_BIONIC_SOURCE_MAP_REQUIRED: "1"
@@ -73,6 +76,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Validate URC mainline policy
+        run: |
+          set -euxo pipefail
+          bash ci/validation/check-urc-mainline-policy.sh
 
       - name: Bootstrap packages (Ubuntu)
         run: |
