ci/workflows: pin explicit donor sha vars for bionic adoption

--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -71,6 +71,9 @@ env:
   WCP_BIONIC_SOURCE_MAP_FORCE: "1"
   WCP_BIONIC_SOURCE_MAP_REQUIRED: "1"
   WCP_BIONIC_LAUNCHER_SOURCE_WCP_URL: https://github.com/StevenMXZ/Winlator-Contents/releases/download/1.0/proton-10-4-arm64ec.wcp.xz
+  WCP_BIONIC_LAUNCHER_SOURCE_WCP_SHA256: b1a7e056d91ba6ee72215b2114c26eff07cb75c4537b010d11f728dafcd3a682
+  WCP_BIONIC_UNIX_SOURCE_WCP_URL: https://github.com/StevenMXZ/Winlator-Contents/releases/download/1.0/proton-10-4-arm64ec.wcp.xz
+  WCP_BIONIC_UNIX_SOURCE_WCP_SHA256: b1a7e056d91ba6ee72215b2114c26eff07cb75c4537b010d11f728dafcd3a682
   PREFIX_PACK_URL: https://raw.githubusercontent.com/GameNative/bionic-prefix-files/main/prefixPack-arm64ec.txz
 
 jobs:
