ci/workflows: trigger package builds on runtime source-map changes

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -8,6 +8,7 @@ on:
       - "ci/ci-build.sh"
       - "ci/lib/**"
       - "ci/runtime-bundle/**"
+      - "ci/runtime-sources/**"
       - ".github/workflows/ci-arm64ec-wine.yml"
       - "docs/**"
   workflow_dispatch:
