--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -8,6 +8,7 @@ on:
       - "ci/proton10/**"
       - "ci/lib/**"
       - "ci/runtime-bundle/**"
+      - "ci/runtime-sources/**"
       - ".github/workflows/ci-proton-ge10-wcp.yml"
       - "docs/**"
   workflow_dispatch:
