--- a/.github/workflows/ci-protonwine10-wcp.yml
+++ b/.github/workflows/ci-protonwine10-wcp.yml
@@ -7,6 +7,7 @@ on:
       - "ci/protonwine10/**"
       - "ci/lib/**"
       - "ci/runtime-bundle/**"
+      - "ci/runtime-sources/**"
       - ".github/workflows/ci-protonwine10-wcp.yml"
       - "docs/**"
   workflow_dispatch:
