--- a/.github/workflows/ci-proton-ge10-wcp.yml
+++ b/.github/workflows/ci-proton-ge10-wcp.yml
@@ -112,6 +112,14 @@ jobs:
           path: ${{ env.TOOLCHAIN_DIR }}
           key: llvm-mingw-${{ env.LLVM_MINGW_VER }}
 
+      - name: Cache bionic donor archives
+        uses: actions/cache@v4
+        with:
+          path: |
+            ${{ env.CACHE_DIR }}/wcp-bionic-launcher-cache
+            ${{ env.CACHE_DIR }}/wcp-bionic-unix-cache
+          key: bionic-donor-${{ env.WCP_BIONIC_LAUNCHER_SOURCE_WCP_SHA256 }}-${{ env.WCP_BIONIC_UNIX_SOURCE_WCP_SHA256 }}
+
       - name: Build Proton GE10 ARM64EC WCP
         run: |
           set -euxo pipefail
